# Acelerador-de-Microservicios-con-IA

nodejs/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
nodejs/src/: index.ts
nodejs/src/api/controllers/: comprehend.controller.ts  polly.controller.ts  rekognition.controller.ts
nodejs/src/api/routes/: comprehend.routes.ts  index.ts  polly.routes.ts  rekognition.routes.ts
nodejs/src/api/services/: comprehend.service.ts  polly.service.ts  rekognition.service.ts
nodejs/src/config/: aws.ts  database.ts
nodejs/src/models/: Log.ts
nodejs/tests/: api.test.ts
nodejs_v2/: .dockerignore  .eslintrc.json  .gitignore  AGENT.md  Dockerfile  README.md  analisis_requerimientos.md  docker-compose.yml  guia_configuracion_aws.md  package-lock.json  package.json  tsconfig.json
nodejs_v2/src/: index.ts
python/: .env.example  .gitignore  AGENT.md  Dockerfile  README.md  analisis-de-requerimientos.md  pyproject.toml  step_by_step_python.md
python/app/: __init__.py  main.py
python/app/api/: __init__.py
python/app/api/v1/: __init__.py  analysis.py  deps.py  health.py  router.py
python/app/core/: __init__.py  aws_provider.py  config.py
python/app/models/: __init__.py  analysis.py  dependency.py  risk.py
python/app/services/: __init__.py  bedrock_service.py  risk_analyzer.py  textract_service.py
python/scripts/: stress_test.py
python/terraform/: main.tf  outputs.tf  variables.tf
python/tests/: __init__.py  conftest.py  test_analysis_endpoints.py  test_health.py  test_models.py  test_services.py
(+18 files in other folders)
